--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </section>
   </div>
   <footer>
-    <p>© 2023 Nandana. All rights reserved.</p>
+    <p>©Nandana. All rights reserved.</p>
   </footer>
 </body>
 </html>
